<resources>
    <string name="app_name">Мои рецепты</string>
    <string name="double_back_exit">Нажмите еще раз для выхода</string>
    <string name="catalog_bottom_menu_title">Каталог</string>
    <string name="favorite_bottom_menu_title">Избранное</string>
    <string name="cooking_title">Готовка</string>
    <string name="creation_bottom_menu_title">Добавить</string>
    <string name="basket_bottom_menu_title">Корзина</string>
    <string name="more_bottom_menu_title">Еще</string>
    <string name="see_all">Смотреть все</string>
    <string name="create">Создать</string>
    <string name="add_new_category_or_recipe_text">Добавьте новую категорию или рецепт</string>
    <string name="create_category">Создать категорию</string>
    <string name="create_recipe">Создать рецепт</string>
    <string name="more">Еще</string>
    <string name="name_hint">Название</string>
    <string name="create_recipe_title">Новый рецепт</string>
    <string name="create_category_title">Новая категория</string>
    <string name="dialog_ok">Да</string>
    <string name="dialog_cancel">Нет</string>
    <string name="dialog_create_cancel">Хотите отменить создание?</string>
    <string name="category_hint">Категория</string>
    <string name="empty_catalog">Каталог пуст</string>
    <string name="recipes">Рецепты</string>
    <string name="categories">Категории</string>
    <string name="image_picker_header">Фото</string>
    <string name="image_picker_camera">Камера</string>
    <string name="image_picker_gallery">Галерея</string>
    <string name="image_picker_delete">Удалить</string>
</resources>
