<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/catalog_navigation"
        android:icon="@drawable/ic_home"
        android:title="@string/catalog_bottom_menu_title" />
    <item
        android:id="@+id/favorite_navigation"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite_bottom_menu_title" />
    <item
        android:id="@+id/creation_navigation"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/creation_bottom_menu_title" />
    <item
        android:id="@+id/basket_navigation"
        android:icon="@drawable/ic_basket"
        android:title="@string/basket_bottom_menu_title" />
    <item
        android:id="@+id/more_navigation"
        android:icon="@drawable/ic_more"
        android:title="@string/more_bottom_menu_title" />
</menu>